# proyecto-desarrollo-soluciones

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  arquitectura.md  data.dvc  docker-compose.yml  dvc.yaml  instrucciones-entrenamiento-gpu-aws.md  pyproject.toml  streamlit.Dockerfile  streamlit_app.py
.dvc/: config
.streamlit/: config.toml
api/: Dockerfile  config.py  main.py  req_resp_types.py  routes.py  run_api.py  s3_utils.py  torch_utils.py  utils.py
cow_detect/datasets/: sky_v1.py  std.py
cow_detect/eval/: evaluate.py
cow_detect/predict/: batch.py  eval.py
cow_detect/train/: train_utils.py  types.py
cow_detect/train/teo/: cow_dataset.py  cow_ds_v1.py  ds_v1.py  train_cfg_toy.yaml  train_cfg_v1-1.yaml  train_cfg_v1-2.yaml  train_cfg_v1.yaml  train_cfg_v11.yaml  train_cfg_v2-1.yaml  train_cfg_v2-2.yaml  train_cfg_v2-3.yaml  train_cfg_v2.yaml  train_cfg_v2_toy.yaml  train_cfg_v3.yaml  train_cfg_v3c.yaml  train_v1.py  train_v2_std.py
cow_detect/train/teo/scratch/: cow_dataset_hf.py  train_detr.py
cow_detect/utils/: annotations.py  config.py  data.py  debug.py  image.py  metrics.py  mlflow_utils.py  pytorch.py  standardize.py  train.py  versioning.py
dashboard/: Dockerfile  streamlit_app.py
dashboard/pages/: 1_Upload_Images.py  2_View_Detections.py
data/: .gitignore  icaerus.dvc  mlruns.dvc  sky.dvc
data/evaluation/: .gitignore
data/prediction/teo/: v1.dvc
data/training/teo/v1/: .gitignore  train_cfg.yaml.dvc
manuales/: manual-de-instalacion.md  manual-de-usuario-dashboard.md
pages/: 1_Upload_Images.py  2_View_Detections.py
research/: plot_mean_std_error_cnt_by_score_thresh.py  try-out-dataloading.py
